--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Wern-Finance</title>
   </head>
-  <body>
+  <body class="bg-[#1a1e1c] font-mplus1 text-white bg-[url(bg.svg)] bg-no-repeat bg-cover">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
